# OpenVoice

./: .gitignore  Makefile  demo.ipynb  inference.py  pyproject.toml  server.py  set_env.sh  setup.py
openvoice/: api.py  logger.py  se_extractor.py
